--- a/package.json
+++ b/package.json
@@ -10,19 +10,19 @@
     "strapi": "strapi",
     "postinstall": "cd plugins/wysiwyg && npm i"
   },
-  "devDependencies": {},
   "dependencies": {
     "strapi": "3.6.6",
     "strapi-admin": "3.6.6",
-    "strapi-utils": "3.6.6",
-    "strapi-plugin-content-type-builder": "3.6.6",
-    "strapi-plugin-content-manager": "3.6.6",
-    "strapi-plugin-users-permissions": "3.6.6",
-    "strapi-plugin-email": "3.6.6",
-    "strapi-plugin-upload": "3.6.6",
-    "strapi-plugin-i18n": "3.6.6",
     "strapi-connector-mongoose": "3.6.6",
-    "strapi-provider-upload-cloudinary": "^3.6.3"
+    "strapi-plugin-content-manager": "3.6.6",
+    "strapi-plugin-content-type-builder": "3.6.6",
+    "strapi-plugin-email": "3.6.6",
+    "strapi-plugin-graphql": "^3.6.6",
+    "strapi-plugin-i18n": "3.6.6",
+    "strapi-plugin-upload": "3.6.6",
+    "strapi-plugin-users-permissions": "3.6.6",
+    "strapi-provider-upload-cloudinary": "^3.6.3",
+    "strapi-utils": "3.6.6"
   },
   "author": {
     "name": "A Strapi developer"
