--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "uuid": "98e022ce-2a68-40ad-a132-071d855e2d90"
   },
   "engines": {
-    "node": ">=10.16.0 <=14.x.x",
-    "npm": "^6.0.0"
+    "node": ">=14.x.x",
+    "npm": ">=6.0.0"
   },
   "license": "MIT"
 }
