--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "strapi-connector-mongoose": "3.6.6",
     "strapi-plugin-content-manager": "3.6.6",
     "strapi-plugin-content-type-builder": "3.6.6",
+    "strapi-plugin-documentation": "^3.6.6",
     "strapi-plugin-email": "3.6.6",
     "strapi-plugin-graphql": "^3.6.6",
     "strapi-plugin-i18n": "3.6.6",
